    - add -extra lib.
    - fix description parsing (closes: #219902)
    - remove some references to the chunk allocator.
    - add version info to installed headers.
    - default log handler suppress debug messages.
  * Petter Reinholdtsen
    - Define PATH_MAX if it is undefined, to get this building on
      GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)

 -- Bastian Blank <waldi@debian.org>  Sun, 14 Dec 2003 18:35:10 +0100

libdebian-installer (0.17) unstable; urgency=low

  * Bastian Blank
    - disable subarch stuff

 -- Bastian Blank <waldi@debian.org>  Fri, 03 Oct 2003 18:07:44 +0200

libdebian-installer (0.16) experimental; urgency=low

  * Bastian Blank
    - rework lib
      - add rfc822 parser
      - add logging
      - add packages file parsing
    - dump major to 4

 -- Bastian Blank <waldi@debian.org>  Thu, 28 Aug 2003 17:46:27 +0200

libdebian-installer (0.15) unstable; urgency=low

  * Bastian Blank
    - Don't log to stderr and close stdin.
    - Never cast malloc return values.
  * Joey Hess
    - added di_status_read and di_config_package

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 22 Jul 2003 13:19:17 +0200

libdebian-installer (0.14) unstable; urgency=low

  * Bastian Blank
    - Add Enhances parsing.
  * Petter Reinholdtsen
    - Add support in di_mapdevfs for SW RAID devices, /dev/md#.
      (Closes: #185574)

 -- Bastian Blank <waldi@debian.org>  Sun, 01 Jun 2003 20:54:45 +0200

libdebian-installer (0.13) unstable; urgency=low

  * Martin Sjögren
    - Add di_mapdevfs function.
    - Change section of libdebian-installer3-dev to libdevel.
    - Add Recommends parsing.
    - Don't log to stderr, it will interfere with frontends.
    - Revert to major/minor/micro. current/revision/age is something
      else.
  * Bastian Blank
    - cleanup di_mapdevfs.
  * Petter Reinholdtsen
    - Add new functin di_logf(), a vararg version of di_log().

 -- Martin Sjogren <sjogren@debian.org>  Sun,  4 May 2003 16:20:20 +0200
