@@ -16,6 +16,9 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
   * Petter Reinholdtsen
     - Define PATH_MAX if it is undefined, to get this building on
       GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
+  * Matt Kraai
+    - Prefer a package that is installed to one that isn't when satisfying
+      a dependency on a virtual package.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 14 Dec 2003 18:35:10 +0100
 
